--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1323,6 +1323,21 @@ input[type=number] {
   --tw-ring-color: rgb(252 165 165 / var(--tw-ring-opacity));
 }
 
+.disabled\:bg-zinc-300:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(212 212 216 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-zinc-900:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(24 24 27 / var(--tw-bg-opacity));
+}
+
+.disabled\:bg-zinc-400:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(161 161 170 / var(--tw-bg-opacity));
+}
+
 .peer:checked ~ .peer-checked\:bg-emerald-600 {
   --tw-bg-opacity: 1;
   background-color: rgb(5 150 105 / var(--tw-bg-opacity));
