--- a/views/finances.html
+++ b/views/finances.html
@@ -106,10 +106,20 @@
             required />
         </div>
         <div class="flex flex-col gap-3">
-          <label for="type" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
+          <label for="type" class="block mb-2 text-md font-medium text-gray-900 dark:text-white ">
             Selecione a categoria
           </label>
           <select id="category-select" disabled
+            class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2 disabled:bg-zinc-400">
+            <option selected>Selecione ..</option>
+          </select>
+        </div>
+
+        <div class="flex flex-col gap-3">
+          <label for="type" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
+            Selecione a conta bancária
+          </label>
+          <select id="accounts-select"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2">
             <option selected>Selecione ..</option>
           </select>
