--- a/views/finances.html
+++ b/views/finances.html
@@ -7,6 +7,8 @@
   <title>Finanças | APP</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../assets/css/output.css">
+  <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   <!-- My CSS -->
   <link rel="stylesheet" href="../assets/css/globals.css">
   <script type="module" src="../assets/js/finances.js" defer></script>
@@ -75,12 +77,12 @@
           <label for="value" class="block mb-2 text-md font-medium text-gray-900 dark:text-white">
             Valor
           </label>
-          <input type="text" id="value"
+          <input type="text" id="value" value="R$ 0,00"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5"
-            placeholder="R$ 100,00" required />
+            placeholder="" required />
         </div>
         <label class="inline-flex items-center cursor-pointer">
-          <input type="checkbox" value="" class="sr-only peer">
+          <input type="checkbox" id="done-checkbox" value="" class="sr-only peer">
           <div
             class="relative w-11 h-6 bg-gray-200 peer-focus:outline-none peer-focus:ring-4 peer-focus:ring-emerald-300 dark:peer-focus:ring-emerald-800 rounded-full peer dark:bg-gray-700 peer-checked:after:translate-x-full rtl:peer-checked:after:-translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[2px] after:start-[2px] after:bg-white after:border-gray-300 after:border after:rounded-full after:h-5 after:w-5 after:transition-all dark:border-gray-600 peer-checked:bg-emerald-600">
           </div>
@@ -111,7 +113,7 @@
           </label>
           <select id="category-select" disabled
             class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2 disabled:bg-zinc-400">
-            <option selected>Selecione ..</option>
+            <option selected>Selecione ...</option>
           </select>
         </div>
 
@@ -121,12 +123,12 @@
           </label>
           <select id="accounts-select"
             class="bg-gray-50 border border-gray-300 text-gray-900 text-md rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2">
-            <option selected>Selecione ..</option>
+            <option selected>Selecione ...</option>
           </select>
         </div>
 
       </div>
-      <button type="submit"
+      <button type="submit" id="save-transaction-btn"
         class="rounded px-4 bg-emerald-500 hover:bg-emerald-600 duration-300 h-10 text-white self-end">
         Adicionar
       </button>
