--- a/views/signup.html
+++ b/views/signup.html
@@ -22,7 +22,7 @@
 
 <body
   class="bg-zinc-100 dark:bg-zinc-900 dark:text-white h-screen flex flex-col justify-center max-w-7xl mx-auto relative">
-  <h1 class="text-4xl font-medium text-center my-10 mb-20 pretty">Registrar-se</h1>
+  <h1 class="text-4xl font-medium text-center my-5 pretty">Registrar-se</h1>
   <div class="flex justify-evenly gap-5 items-center flex-col-reverse lg:flex-row lg:gap-0">
     <form class="relative w-6/12 lg:w-3/12 flex flex-col justify-center">
       <div class="flex flex-col gap-3 mb-3">
@@ -64,5 +64,6 @@
     <img class="hidden lg:block w-6/12 lg:w-4/12 h-64 lg:h-80" src="../assets/img/signup_img.svg" alt="" />
   </div>
 </body>
+<span class="hidden bg-amber-500 hover:bg-amber-600 text-emerald-500 text-red-500"></span>
 
 </html>
